@@ -56,11 +56,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
     Jira: https://issues.apache.org/jira/browse/TS-860
     +1: zwoop, igalic
 
-  * Management: cop Crash, InactivityCop::check_inactivity, event=2, UnixNet.cc:57
-    Trunk patch: http://svn.apache.org/viewvc?rev=1144094&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-834
-    +1: zym, zwoop, jesus
-
   * API: TSFetchRestpGet(), TSFetchPageResptGet() and TSFetchUrl() have
          incorrect asserts.
     Trunk patch: http://svn.apache.org/viewvc?rev=1146414&view=rev
