@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.0.1
+  *)i [TS-834] InactivityCop::check_inactivity crash
+
   *) [TS-826] TSHttpTxnErrorBodySet() can leak memory.
     Author: William Bardwell 
 
